k8s/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prod
  labels:
    kubernetes.io/metadata.name: prod
