k8s/prod/app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-service
  namespace: prod
spec:
  type: ClusterIP
  selector:
    app: nodejs-app
  ports:
    - name: http
      port: 5000
      targetPort: 5000
